Import of JDUTTON/Parse-RandGen-0.200 from CPAN.
gitpan-cpan-distribution: Parse-RandGen
gitpan-cpan-version:      0.200
gitpan-cpan-path:         JDUTTON/Parse-RandGen-0.200.tar.gz
gitpan-cpan-author:       JDUTTON
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,8 +3,8 @@
 Copyright
 =========
 
-   This package is Copyright 2003 by Jeff Dutton
-<jeff_dutton@hotmail.com>.
+   This package is Copyright 2003-2005 by Jeff Dutton
+<jdutton@cpan.org>.
 
    You may distribute under the terms of either the GNU General Public
 License or the Artistic License, as specified in the Perl README file.
