--- a/NEWS
+++ b/NEWS
@@ -1,19 +1,32 @@
 Parse::RandGen NEWS --  history of user-visible changes.
-Copyright (C) 2003 Jeff Dutton.
 See the end for copying conditions.
 
 The contributors that suggested a given feature is shown in [].
 
-* Initial release of Parse::RandGen 0.1 8/19/2003
+* Changes in Parse::RandGen 0.200 7/13/2005
+
+**	Fix bug in CharClass when min is specified but not max
+	(e.g. /a{50,}/).  [James Gregory]
+
+***	Added support for captures in Regexp (named or numbered).
+
+***	Added ability for pick() to take user-specified values for
+	subrules or regexp captures to constrain the generation of
+	random data.
+
+
+* Initial release of Parse::RandGen 0.100 8/19/2003
 
 ****	Initial release
 
 ----------------------------------------------------------------------
-$Revision: #1 $$Date: 2003/08/20 $$Author: jdutton $
+$Revision: #2 $$Date: 2005/06/27 $$Author: jd150722 $
 ----------------------------------------------------------------------
 Copyright information:
 
-Copyright (C) 2003 Jeff Dutton
+   Copyright 2003-2005 by Jeff Dutton.  This program is free software;
+   you can redistribute it and/or modify it under the terms of either the GNU
+   General Public License or the Perl Artistic License.
 
    See the README file included with this file for licencing information.
 
