--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,20 @@ See the end for copying conditions.
 
 The contributors that suggested a given feature is shown in [].
 
+* Changes in Parse::RandGen 0.202 8/31/2005
+**	Fix bug in Literal::pick(match=>0) that resulted in the
+	literal not being corrupted, as it should.
+
+***	Refactored common code from pick() into pickRepetitions()
+	[James Gregory]
+
+***	$Parse::RandGen::Debug can be set to enable debug messages.
+
+***	In the pick() functions, when a capture is specified and match=>1,
+	only the last repetition of a Subrule gets the value of the capture
+	(the others can be anything).
+
+
 * Changes in Parse::RandGen 0.201 7/14/2005
 **	Added "t/15_regex_pick.t" test to the MANIFEST
 	(forgot it in 0.200)
@@ -26,7 +40,7 @@ The contributors that suggested a given feature is shown in [].
 ****	Initial release
 
 ----------------------------------------------------------------------
-$Revision: #2 $$Date: 2005/06/27 $$Author: jd150722 $
+$Revision: #4 $$Date: 2005/08/31 $$Author: jd150722 $
 ----------------------------------------------------------------------
 Copyright information:
 
